Prevent overflow

--- a/assets/stylesheets/default.sass
+++ b/assets/stylesheets/default.sass
@@ -17,6 +17,8 @@ body
 
 .wrapper
   min-height: 100%
+  max-width: 100%
+  overflow: hidden
 
   .sidebar
     background: $sidebar-back
